# auto_torrent

./: .gitignore  Cargo.toml  DockerfIle  Dockerfile  README.md  compose.yml
.github/workflows/: docker-buiild-qbittorrent.yml  docker-buiild.yml
auto_torrent/: Dockerfile
auto_torrent/src/: main.rs
qbit_changed_config/: Dockerfile  qBittorrent.conf  watched_folders.json
src/: main.rs
test/: fdvj  rhgbrfj,iobfuvi
